--- a/src/Meruwa.AspNetCore/Meruwa.AspNetCore.csproj
+++ b/src/Meruwa.AspNetCore/Meruwa.AspNetCore.csproj
@@ -3,6 +3,15 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Meruwa</RootNamespace>
+    <Version>0.0.1</Version>
+    <Authors>Ikechukwu Konweh</Authors>
+    <Description>A simple multi-channel solution for pushing streams to connected clients.</Description>
+    <PackageProjectUrl>https://github.com/ikebig/meruwa</PackageProjectUrl>
+    <Copyright>Ikechukwu Konweh</Copyright>
+    <RepositoryUrl>https://github.com/ikebig/meruwa</RepositoryUrl>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Company />
   </PropertyGroup>
 
   <ItemGroup>
