--- a/src/Meruwa/Meruwa.csproj
+++ b/src/Meruwa/Meruwa.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.1</Version>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <Authors>Ikechukwu Konweh</Authors>
+    <Description>A simple multi-channel solution for pushing streams to connected clients.</Description>
+    <PackageProjectUrl>https://github.com/ikebig/meruwa</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ikebig/meruwa</RepositoryUrl>
+    <Company />
   </PropertyGroup>
 
 </Project>
